Firefox fix for button overflowing event check in module (#150)
* Firefox fix for button overflowing event check in module

* Actual fix

--- a/src/components/EventCheckIn/style.less
+++ b/src/components/EventCheckIn/style.less
@@ -30,6 +30,7 @@
       color: @blue-3;
       border: none;
       margin-right: 20px;
+      min-width:calc(100% - 140px);
     }
 
     .submit {
